fears: vehicles, csv load, removing json tags from entity

--- a/APIs/makefile
+++ b/APIs/makefile
@@ -9,11 +9,15 @@ run:
 
 build:
 	@echo "==> BUILD.."
-	@go build -o bin/server cmd/server/main.go ldflags "-s -w"
+	@go build -o bin/server cmd/server/main.go
 
-testx:
+test:
 	@echo "==> TEST.."
 	@go test -v ./...
+
+exp:
+	@echo "==> EXPORT.."
+	@export $(cat .env | xargs)
 
 clean:
 	@echo "==> CLEAN.."
